@@ -1,8 +1,14 @@
+2011-06-30 Gabor Simon <gabor.simon@mailbox.hu>
+Some code cleanup done
+
+    * src/org/dyndns/fules/ck/CompassKeyboardView.java: code cleanup
+
+    * src/org/dyndns/fules/ck/*.java: indentation fixed
+
 2011-06-28 Gabor Simon <gabor.simon@mailbox.hu>
 Touch handling of aligmnent areas improved
 
     * src/org/dyndns/fules/ck/CompassKeyboardView.java: margins and Align items now check for global swipes
-
 
 2011-06-27 Gabor Simon <gabor.simon@mailbox.hu>
 Support for alignment started
